refactor: implement DragLimitedSlider without subclassing SliderUI
BasicSliderUI.TrackListener#mouseDragged(...) moves the thumb to the raw
mouse location regardless of the current value, so the thumb was painted
outside the limited range while dragging. calculateThumbLocation(), which
places the thumb at the position of the current value, is only called
while BasicSliderUI#isDragging() returns false. Consuming MOUSE_PRESSED,
MOUSE_DRAGGED and MOUSE_RELEASED in JSlider keeps the TrackListener from
starting a thumb drag, so the LookAndFeel itself places the thumb at the
limited value. Converting the cursor location into a value only needs the
public BasicSliderUI#valueForXPosition(int)/valueForYPosition(int), so
the protected thumbRect, xPositionForValue(int) and TrackListener#offset
are no longer required.

This removes the com.sun.java.swing.plaf.windows.WindowsSliderUI and
BasicSliderUI subclasses, so NimbusLookAndFeel and other LookAndFeels
keep their own appearance. SwingConstants.VERTICAL is also supported.